--- a/associative_container/CMakeLists.txt
+++ b/associative_container/CMakeLists.txt
@@ -4,7 +4,8 @@ project(mp_os_assctv_cntnr)
 add_subdirectory(search_tree)
 add_library(
         mp_os_assctv_cntnr
-        include/associative_container.h)
+        include/associative_container.h
+        src/ok.cpp)
 target_include_directories(
         mp_os_assctv_cntnr
         PUBLIC
@@ -19,6 +20,6 @@ set_target_properties(
         DESCRIPTION "associative container interface library"
         LANGUAGES CXX
         LINKER_LANGUAGE CXX
-        CXX_STANDARD 14
+        CXX_STANDARD 23
         CXX_STANDARD_REQUIRED ON
         CXX_EXTENSIONS OFF)
