--- a/associative_container/search_tree/binary_search_tree/CMakeLists.txt
+++ b/associative_container/search_tree/binary_search_tree/CMakeLists.txt
@@ -8,7 +8,8 @@ add_subdirectory(splay_tree)
 add_subdirectory(tests)
 add_library(
         mp_os_assctv_cntnr_srch_tr_bnr_srch_tr
-        include/binary_search_tree.h)
+        include/binary_search_tree.h
+        src/ok.cpp)
 target_include_directories(
         mp_os_assctv_cntnr_srch_tr_bnr_srch_tr
         PUBLIC
@@ -27,6 +28,6 @@ set_target_properties(
         DESCRIPTION "binary search tree implementation library"
         LANGUAGES CXX
         LINKER_LANGUAGE CXX
-        CXX_STANDARD 14
+        CXX_STANDARD 23
         CXX_STANDARD_REQUIRED ON
         CXX_EXTENSIONS OFF)
